...
    Column(
        modifier = Modifier
            .fillMaxWidth()
            .padding(horizontal = gridSpacing / 2, vertical = gridSpacing / 2)
            .then(
                if (controllerFocused) {
                    Modifier.testTag("library-controller-focus-indicator")
                } else {
                    Modifier
                },
            )
            .then(
                if (controllerFocused) {
...
